--- a/ML/gradient_descent/greadient_descent.ipynb
+++ b/ML/gradient_descent/greadient_descent.ipynb
@@ -114,6 +114,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "450d3cbb",
+   "metadata": {},
+   "source": [
+    "Every machine learning model makes mistakes at first.\n",
+    "\n",
+    "Gradient Descent helps the model:\n",
+    "\n",
+    "Measure how wrong it is\n",
+    "\n",
+    "Adjust itself slightly\n",
+    "\n",
+    "Repeat this process until errors are as small as possible\n",
+    "\n",
+    "This happens iteratively.\n",
+    "\n",
+    "Do You Have to Find this gradients manually?\n",
+    "❌ No — you do NOT find them manually.\n",
+    "\n",
+    "You never calculate weights and biases by hand (except in theory or exams).\n",
+    "\n",
+    "✅ The model + training algorithm does it for you.\n",
+    "\n",
+    "Here’s how responsibility is divided:\n",
+    "\n",
+    "👨‍💻 You (the engineer) define:\n",
+    "\n",
+    "Model architecture (layers, neurons)\n",
+    "\n",
+    "Loss function\n",
+    "\n",
+    "Optimizer (e.g., SGD, Adam)\n",
+    "\n",
+    "Learning rate\n",
+    "\n",
+    "Training data\n",
+    "\n",
+    "🤖 The model + optimizer:\n",
+    "\n",
+    "Computes gradients\n",
+    "\n",
+    "Applies gradient descent\n",
+    "\n",
+    "Updates weights and biases\n",
+    "\n",
+    "Repeats until convergence\n",
+    "\n",
+    "3️⃣ Who Actually Runs Gradient Descent?\n",
+    "In practice:\n",
+    "\n",
+    "Frameworks like TensorFlow, PyTorch, Keras do it automatically.\n",
+    "\n",
+    "You just configure it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "859c6541",
