--- a/ML/reg/lin_reg/lin_reg.ipynb
+++ b/ML/reg/lin_reg/lin_reg.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "41627e68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here in linear regression prediction is always continuous"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a649e191",
    "metadata": {},
@@ -487,7 +497,7 @@
    ],
    "source": [
     "# training the model\n",
-    "reg.fit(df[['area']],df.price)"
+    "reg.fit(df[['area']],df.price) # 1st argument is 2D"
    ]
   },
   {
