--- a/ML/one_hot_encoding/ohe.ipynb
+++ b/ML/one_hot_encoding/ohe.ipynb
@@ -5,10 +5,14 @@
    "id": "82d4b6d0",
    "metadata": {},
    "source": [
-    "Method\t            What it does\n",
-    "fit()\t            Learns parameters from data\n",
-    "transform()\t        Applies learned parameters\n",
-    "fit_transform()\t    Does both in one step\n",
+    "Method and What it does\n",
+    "\n",
+    "fit() - Learns parameters from data\n",
+    "\n",
+    "transform() - Applies learned parameters\n",
+    "\n",
+    "fit_transform()\t- Does both in one step\n",
+    "\n",
     "\n",
     "Why Not Always Use fit_transform()?\n",
     "\n",
