--- a/ML/2_classification/naive_bayes/naive_bayes(2).ipynb
+++ b/ML/2_classification/naive_bayes/naive_bayes(2).ipynb
@@ -17,7 +17,7 @@
    "id": "569e74a4",
    "metadata": {},
    "source": [
-    "** Vectorizer and Pipeline\n",
+    "*** Vectorizer and Pipeline ***\n",
     "\n",
     "👉 It converts text → numbers by counting words.\n",
     "\n",
@@ -515,7 +515,7 @@
    "id": "b81b57a6",
    "metadata": {},
    "source": [
-    "![vectorizer](image.png)\n",
+    "![vectorizer](countVector.png)\n",
     "\n",
     "here in the 4 documents these are unique words found and the matrix is formed based on the occurences of those words in the documents"
    ]
