--- a/ML/2_classification/SVM/svm.ipynb
+++ b/ML/2_classification/SVM/svm.ipynb
@@ -5,7 +5,7 @@
    "id": "5cf8e985",
    "metadata": {},
    "source": [
-    "🧠 Gamma and Regularization in SVM \n",
+    " Gamma and Regularization in SVM \n",
     "\n",
     "Support Vector Machine (SVM) is a powerful classifier, but its behavior depends heavily on hyperparameters — especially C (regularization) and gamma.\n",
     "\n",
