--- a/ML/L1&L2regularisation/regularisation.ipynb
+++ b/ML/L1&L2regularisation/regularisation.ipynb
@@ -2,25 +2,159 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93533723",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nunique, warnings, drop_first(in get_dummies),axis=1(in drop) - doubts\n",
-    "# isna().sum(),fillna \n",
+    "# warnings, drop_first(in get_dummies to avoid dummy variable trap),axis=1(0-rows 1-columns)\n",
     "\n",
-    "# used for handling overfitting\n",
+    "# isna().sum(),fillna \n",
     "\n",
     "# balancing between overfit and underfit\n",
     "\n",
-    "# lambda - acts as penalty when mse increases\n",
+    "# lambda - acts as penalty when mse increases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27f25fc8",
+   "metadata": {},
+   "source": [
+    "📘 L1 & L2 Regularization (Lasso & Ridge)\n",
     "\n",
-    "# diff between ridge and lasso\n",
+    "🔹 Why Regularization?\n",
     "\n",
-    "# l1-lasso - alpha, max_iter, tol\n",
+    "Regularization is used to prevent overfitting.\n",
     "\n",
-    "# does this l1&l2 are only applicable for regression alone"
+    "📌 Overfitting vs Underfitting\n",
+    "\n",
+    "Overfitting → Model memorizes training data, performs poorly on new data\n",
+    "\n",
+    "Underfitting → Model is too simple, misses patterns\n",
+    "\n",
+    "👉 Regularization balances this trade-off\n",
+    "\n",
+    "🔹 What is L1 and L2 Regularization?\n",
+    "\n",
+    "Regularization adds a penalty term to the loss function.\n",
+    "\n",
+    "General Loss Function\n",
+    "\n",
+    "    Total Loss = Error (MSE) + Penalty\n",
+    "\n",
+    "🔹 L1 Regularization (Lasso Regression)\n",
+    "\n",
+    "📌 Formula\n",
+    "\n",
+    "Loss = MSE + λ × Σ|weights|\n",
+    "\n",
+    "🔍 Key Properties\n",
+    "\n",
+    "Uses absolute values of weights\n",
+    "\n",
+    "Can make some weights exactly zero\n",
+    "\n",
+    "Performs feature selection\n",
+    "\n",
+    "✅ Advantages\n",
+    "\n",
+    "    ✔ Reduces overfitting\n",
+    "\n",
+    "    ✔ Automatically removes irrelevant features\n",
+    "\n",
+    "❌ Disadvantages\n",
+    "\n",
+    "    ❌ Unstable when features are highly correlated\n",
+    "\n",
+    "🔹 L2 Regularization (Ridge Regression)\n",
+    "\n",
+    "📌 Formula\n",
+    "\n",
+    "Loss = MSE + λ × Σ(weights²)\n",
+    "\n",
+    "🔍 Key Properties\n",
+    "\n",
+    "Uses squared weights\n",
+    "\n",
+    "Shrinks weights close to zero, but not exactly zero\n",
+    "\n",
+    "Keeps all features\n",
+    "\n",
+    "✅ Advantages\n",
+    "\n",
+    "✔ Handles multicollinearity well\n",
+    "✔ More stable than L1\n",
+    "\n",
+    "❌ Disadvantages\n",
+    "\n",
+    "❌ Does NOT perform feature selection\n",
+    "\n",
+    "🔹 Difference Between Lasso (L1) and Ridge (L2)\n",
+    "\n",
+    "| Feature           | Lasso (L1)      | Ridge (L2)     |\n",
+    "| ----------------- | --------------- | -------------- |\n",
+    "| Penalty           | Absolute values | Squared values |\n",
+    "| Feature Selection | Yes             | No             |\n",
+    "| Coefficients      | Can be zero     | Never zero     |\n",
+    "| Multicollinearity | Poor            | Good           |\n",
+    "\n",
+    "🔹 Elastic Net (L1 + L2)\n",
+    "\n",
+    "Combination of both penalties.\n",
+    "\n",
+    "Loss = MSE + λ₁(L1) + λ₂(L2)\n",
+    "\n",
+    "\n",
+    "📌 Used when:\n",
+    "\n",
+    "Many features\n",
+    "\n",
+    "Highly correlated features\n",
+    "\n",
+    "🔹 What is Alpha (α)?\n",
+    "α = Regularization strength\n",
+    "\n",
+    "\n",
+    "High α → More penalty → Simpler model → Risk of underfitting\n",
+    "\n",
+    "Low α → Less penalty → Complex model → Risk of overfitting\n",
+    "\n",
+    "📌 Alpha = Lambda (λ)\n",
+    "\n",
+    "🔹 max_iter (Maximum Iterations)\n",
+    "\n",
+    "Maximum number of optimization steps\n",
+    "\n",
+    "Used by gradient descent solvers\n",
+    "\n",
+    "📌 Increase max_iter if:\n",
+    "\n",
+    "Model shows convergence warnings\n",
+    "\n",
+    "Dataset is large\n",
+    "\n",
+    "🔹 tol (Tolerance)\n",
+    "\n",
+    "Threshold for stopping training\n",
+    "\n",
+    "Training stops when improvement < tol\n",
+    "\n",
+    "📌 Smaller tol → More accurate but slower\n",
+    "📌 Larger tol → Faster but less precise\n",
+    "\n",
+    "🔹 Is L1 & L2 Only for Regression?\n",
+    "\n",
+    "❌ NO\n",
+    "\n",
+    "Used in:\n",
+    "\n",
+    "✔ Linear Regression\n",
+    "✔ Logistic Regression\n",
+    "✔ Neural Networks\n",
+    "✔ SVMs\n",
+    "\n",
+    "📌 Any model with weights can use regularization"
    ]
   },
   {
@@ -40,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "d1f0ad57",
    "metadata": {},
    "outputs": [],
@@ -53,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "3706ec5c",
    "metadata": {},
    "outputs": [],
@@ -65,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "b6c696cf",
    "metadata": {},
    "outputs": [
@@ -271,7 +405,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "4fefcfef",
    "metadata": {},
    "outputs": [
@@ -314,7 +448,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "a851b434",
    "metadata": {},
    "outputs": [
@@ -346,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "c2245e4a",
    "metadata": {},
    "outputs": [
@@ -519,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "9b068223",
    "metadata": {},
    "outputs": [
@@ -540,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "1c850167",
    "metadata": {},
    "outputs": [
@@ -576,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "c86be5f8",
    "metadata": {},
    "outputs": [
@@ -614,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "73113cde",
    "metadata": {},
    "outputs": [
@@ -652,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "1f3c5784",
    "metadata": {},
    "outputs": [
@@ -712,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "d63c02d3",
    "metadata": {},
    "outputs": [],
@@ -723,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "898c2f38",
    "metadata": {},
    "outputs": [],
@@ -734,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "2b7d5605",
    "metadata": {},
    "outputs": [],
@@ -745,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "9574ba24",
    "metadata": {},
    "outputs": [
@@ -789,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "9c701f2a",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "8e19eb25",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "233decdb",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1706,7 +1840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
